# ROS2

./: .gitignore  Doxyfile  Example_8cpp.html  Example_8cpp__incl.map  Example_8cpp__incl.md5  MainPage.cpp  README.md  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  todo.txt  todo_blake.txt  todo_joseph.txt
.github/workflows/: main.yml
Notes/: building.txt  camera.txt  running.txt
Notes/notes/: binary_message_encoding_functions_printer.txt  encode
scoop/launch/: NewLaunch.py  launch.py
scoop/src/arduino/: package.xml  setup.cfg  setup.py
scoop/src/arduino/arduino/: arduino_node.py
scoop/src/communication2/src/: communication_node.cpp
scoop/src/excavation/src/: excavation_node.cpp
scoop/src/logic/src/: Automation.cpp  Automation1.cpp  logic_node.cpp
scoop/src/messages/: CMakeLists.txt
scoop/src/messages/msg/: LinearOut.msg  ZedPosition.msg
scoop/src/neo/: CMakeLists.txt  package.xml
scoop/src/neo/include/: CANSparkMax.hpp
scoop/src/neo/src/: CANSparkMax.cpp  neo_node.cpp
scoop/src/stepper/: package.xml  setup.cfg  setup.py
scoop/src/stepper/stepper/: stepper_node.py
scoop/src/talon/src/: talon_node.cpp
scoop/src/test/src/: test_node.cpp
scoop/src/zed_tracking/src/: zed_tracking_node.cpp
search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
shovel/install/: local_setup.sh  setup.sh
shovel/launch/: NewLaunch.py  launch.py  launch_autonomy.py  launch_cam.py  launch_comm.py  launch_drivetrain.py  launch_excav.py  launch_falcon_11.py  launch_falcon_12.py  launch_logic.py  launch_motors.py  launch_motors.sh  launch_motors_can1.py  launch_nano.py  launch_nano_no_motors.py  launch_no_motors.py  launch_status_monitor.py  launch_talon.py  launch_talon_15.py  launch_test.py  launch_zed.py
shovel/launch/launch_node/: launch_comm.py  launch_falcon_10.py  launch_reset.py  launch_talon_16.py  launch_talon_17.py  launch_video.py
shovel/launch/launch_node/can0/: launch_falcon_13.py  launch_pdp.py  launch_talon_14.py
shovel/launch/launch_node/can1/: launch_falcon_10.py  launch_falcon_10.sh  launch_falcon_11.py  launch_falcon_11.sh  launch_falcon_12.py  launch_falcon_12.sh  launch_falcon_13.py  launch_falcon_13.sh  launch_pdp.py  launch_talon_14.py  launch_talon_14.sh  launch_talon_15.py  launch_talon_16.py  launch_talon_16.sh  launch_talon_17.py
shovel/log/: latest_build
shovel/src/autonomy/: CMakeLists.txt  package.xml
shovel/src/autonomy/include/autonomy/: Automation.hpp
shovel/src/autonomy/include/logic/: Automation1.hpp  AutomationTypes.hpp
shovel/src/autonomy/src/: Automation.cpp  Automation1.cpp  autonomy_node.cpp  search.cpp
shovel/src/common/: CMakeLists.txt  package.xml
shovel/src/common/src/: CommonFuncs.cpp
shovel/src/common_funcs/: CMakeLists.txt  package.xml
shovel/src/common_funcs/src/: CommonFuncs.cpp
shovel/src/communication/: CMakeLists.txt  package.xml
shovel/src/communication/include/: BinaryMessage.hpp
shovel/src/communication/notes/: binary_message_encoding_functions.txt  binary_message_encoding_functions_printer.docx  binary_message_encoding_functions_printer.txt  binary_message_notes.txt  crc.cpp  error_check_test.cpp  formatted_binary_message.docx  notes_3_6.txt  ~$nary_message_encoding_functions_printer.docx
shovel/src/communication/src/: BinaryMessage.cpp  communication_node.cpp
shovel/src/drivetrain/: CMakeLists.txt  package.xml
shovel/src/drivetrain/src/: drivetrain_node.cpp
shovel/src/excavation/: CMakeLists.txt  package.xml
shovel/src/excavation/src/: excavation_node.cpp
shovel/src/falcon/: CMakeLists.txt  package.xml
shovel/src/falcon/src/: falcon_node.cpp
shovel/src/logic/: CMakeLists.txt  package.xml
shovel/src/logic/src/: Automation.cpp  Automation1.cpp  Automation2.cpp  Automation3.cpp  logic_node.cpp  search.cpp
shovel/src/messages/: CMakeLists.txt
shovel/src/messages/msg/: AutonomyOut.msg  AutonomyStatus.msg  FalconOut.msg  FalconStatus.msg  LinearOut.msg  Power.msg  SystemStatus.msg  TalonOut.msg  ZedPosition.msg
shovel/src/power_distribution_panel/: CMakeLists.txt  package.xml
shovel/src/power_distribution_panel/src/: PowerDistributionPanel.cpp  power_distribution_panel_node.cpp
shovel/src/realsense/: CMakeLists.txt  package.xml
shovel/src/realsense/src/: realsense_node.cpp
shovel/src/reset/: package.xml  setup.cfg  setup.py
shovel/src/reset/reset/: reset.py
shovel/src/status_monitor/: CMakeLists.txt  package.xml
shovel/src/status_monitor/src/: status_monitor_node.cpp
shovel/src/talon/: CMakeLists.txt  package.xml
shovel/src/talon/src/: talon_node.cpp
shovel/src/utils/: CMakeLists.txt  package.xml
shovel/src/utils/include/utils/: utils.hpp
shovel/src/utils/src/: utils.cpp
shovel/src/video_streaming/: CMakeLists.txt  package.xml
shovel/src/zed_tracking/: CMakeLists.txt  package.xml
skinny/launch/: launch_neo.py
skinny/src/victor/: CMakeLists.txt  package.xml
spinner/launch/: launch.py  launch_falcon.py
spinner/src/communication2/: CMakeLists.txt  package.xml
spinner/src/falcon/: CMakeLists.txt  package.xml
spinner/src/neo/: .CMakeLists.txt.swo  CMakeLists.txt
spinner/src/neo/include/frc/: ErrorBase.h
spinner/src/neo/include/rev/: CANError.h  CANSparkMaxDriver.h  CANSparkMaxDriverPrivate.h  CANSparkMaxFrames.h  CANSparkMaxHeartbeat.h  CANSparkMaxSWDL.h  REVCommon.h  REVLibErrors.h  REVLibVersion.h  REVUtils.h  SparkMax.h
spinner/src/neo/include/rev/sim/: CANSparkMax.h
spinner/src/neo/include/rev/src/: CANDeviceScanner.cpp  CANSparkMax.cpp  CANSparkMaxLowLevel.cpp  CIEColor.cpp  ColorMatch.cpp  ColorSensorV3.cpp  SparkMaxAlternateEncoder.cpp  SparkMaxAnalogSensor.cpp  SparkMaxLimitSwitch.cpp  SparkMaxPIDController.cpp  SparkMaxRelativeEncoder.cpp
spinner/src/neo/src/: neo_node.cpp
spinner/src/servo/: package.xml  setup.py
spinner/src/zed/: CMakeLists.txt  package.xml
(+134 files in other folders)
